--- a/app/globals.css
+++ b/app/globals.css
@@ -117,6 +117,15 @@ body {
   }
 }
 
+.hide-scrollbar {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE/Edge */
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome/Safari/Opera */
+}
+
 
 /* mobile-specific styles*/
 @media (max-width: 767px) {
