fixed side menu mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -166,3 +166,12 @@ body {
 .menu-icon {
   @apply w-5 h-5 text-primary-yellow;
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
